<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/textView" android:layout_width="289dp" android:layout_height="29dp" android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp" android:layout_marginRight="8dp" android:text="TextView" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/bt_save"/>
    <ListView android:id="@+id/listView" android:layout_width="397dp" android:layout_height="619dp" android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp" android:choiceMode="multipleChoice" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button android:id="@+id/bt_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp" android:text="@string/save" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <Button android:id="@+id/bt_delete" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginLeft="112dp" android:layout_marginTop="8dp" android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView android:textSize="18sp" android:id="@+id/textView9" android:layout_width="155dp"
        android:layout_height="28dp" android:layout_marginTop="16dp" android:layout_marginRight="16dp"
        android:text="@string/help_double" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>