<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.penthouse_bogmjary.CustomImageView
        android:id="@+id/zoom_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_file"
        app:layout_constraintVertical_bias="0.8"/>

    <Button android:textSize="24sp"
        android:background="@drawable/button_color"
        android:id="@+id/bt_up"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:text="▲"
        app:layout_constraintEnd_toStartOf="@+id/bt_dn"
        app:layout_constraintTop_toTopOf="@+id/bt_delete"/>
    <Button
        android:background="@drawable/button_color"
        android:id="@+id/bt_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/open_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next"/>
    <Button
        android:id="@+id/bt_pic"
        android:background="@drawable/button_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/pic"
        app:layout_constraintStart_toEndOf="@+id/bt_file"
        app:layout_constraintTop_toTopOf="@+id/bt_file"/>
    <Button android:id="@+id/next"
        android:background="@drawable/button_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simulation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/enable_zoom"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="#ffeb3b"
        android:text="zoom"
        app:layout_constraintEnd_toStartOf="@+id/bt_delete"
        app:layout_constraintTop_toTopOf="@+id/next" />

    <Button android:id="@+id/bt_delete" android:layout_width="65dp"
        android:background="@drawable/button_color"
        android:layout_height="wrap_content" android:layout_marginRight="5dp"
        android:text="@string/delete" app:layout_constraintEnd_toStartOf="@+id/bt_up"
        app:layout_constraintTop_toTopOf="@+id/enable_zoom"/>
    <Button android:textSize="24sp"
        android:id="@+id/bt_dn"
        android:background="@drawable/button_color"
        android:layout_width="59dp"
        android:layout_height="48dp" android:text="▼" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_up"/>
    <TextView android:id="@+id/txt_info" android:layout_width="164dp" android:layout_height="34dp"
        android:layout_marginLeft="8dp" android:layout_marginTop="8dp" app:layout_constraintStart_toEndOf="@+id/bt_pic"
        app:layout_constraintTop_toTopOf="@+id/bt_pic"/>
</androidx.constraintlayout.widget.ConstraintLayout>