<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <EditText android:id="@+id/txt_step" android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:layout_marginRight="8dp"
        android:ems="10" android:inputType="none|number|numberSigned|numberDecimal" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <EditText android:id="@+id/txt_latitude" android:layout_width="300dp" android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:ems="10"
        android:inputType="none|number|numberSigned|numberDecimal" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <EditText android:id="@+id/txt_logitude" android:layout_width="300dp" android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:ems="10"
        android:inputType="none|number|numberSigned|numberDecimal" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <EditText android:id="@+id/txt_timezone" android:layout_width="300dp" android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:ems="10"
        android:inputType="none|number|numberSigned|numberDecimal" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <EditText android:id="@+id/txt_month" android:layout_width="300dp" android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:layout_marginRight="8dp"
        android:ems="10" android:inputType="none|number|numberSigned|numberDecimal" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <Button android:id="@+id/bt_save" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:text="save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_citys"/>
    <Spinner android:id="@+id/sp_nation" android:layout_width="300dp" android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_month"/>
    <Spinner android:id="@+id/sp_citys" android:layout_width="300dp" android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_nation"/>
    <TextView android:textSize="14sp" android:id="@+id/textView3" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="16dp"
        android:text="@string/height_per_floor" android:autoText="false" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:text="@string/opt_lattitude"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txt_step"/>
    <TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:text="@string/opt_longitude"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txt_latitude"/>
    <TextView android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginTop="4dp" android:text="@string/month"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txt_timezone"/>
    <TextView android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:text="Time Zone"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txt_logitude"/>
</androidx.constraintlayout.widget.ConstraintLayout>